src/ingress/retail-store-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-store-ingress
  namespace: retail-store
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: retail-store.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: retail-store-ui-retail-store-sample-ui-chart
            port:
              number: 8080
